# ros_ui

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: ui.pc
devel/lib/ui/: app  publisher.py
devel/share/roseus/ros/ui/: manifest.l
devel/share/ui/cmake/: ui-msg-paths.cmake  uiConfig.cmake
src/ui/: CMakeLists.txt
src/ui/launch/: ui.launch
src/ui/src/: app.cpp  app.qml
